--- a/copyright.html
+++ b/copyright.html
@@ -6,7 +6,7 @@
    <link rel="stylesheet" href="module.css">
    <link rel="stylesheet" href="state.css">
     <title>
-	 Mariam's Personal Info
+	 Copyright
 	 </title>	
   </head>
   
@@ -45,5 +45,6 @@
  <h2 class="info">
 Coypright
    </h2>
+   I don't allow any copyright except by permission.
    <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Mariam's Resume</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://students.washington.edu/mhd94/info343Assign2/Assignment2/personal.html" property="cc:attributionName" rel="cc:attributionURL">Mariam Davis</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a>.
    </div>
